Fixed width on mobile

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -105,6 +105,9 @@ div#posts-container
       vertical-align: top
       max-width: calc(100% - 170px)
 
+      @media only screen and (max-width: 720px)
+        max-width: 100%
+
       a.post-tag,
       a.post-tag:active,
       a.post-tag:visited
